choose us and footer updated

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@300&family=Arvo:ital,wght@1,700&family=Poppins&family=Trochut&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
