--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/TiffinWalaLogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Tiffin Wala is a Tiffin Managment website from where a user can order a home made tiffin and local tiffin providers can bring there tiffin services on Internet" />
+  <meta name="description" content="Welcome to" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/TiffinWalaLogo.png" />
   <link rel="stylesheet" href="index.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
